# suunta

./: AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  deny.toml
.github/workflows/: ci.yml
crates/suunta/: Cargo.toml  README.md
crates/suunta-contract/: Cargo.toml  README.md
crates/suunta-contract/examples/: converge.rs
crates/suunta-contract/src/: lib.rs
crates/suunta-governance/: Cargo.toml  README.md
crates/suunta-governance/src/: main.rs
crates/suunta/src/: lib.rs
crates/suunta/tests/: convergence_loop.rs
docs/: development-flow.md  domain-language.md
openspec/: config.yaml
openspec/changes/establish-suunta-shape/: design.md  proposal.md  tasks.md
openspec/changes/establish-suunta-shape/specs/convergence-contract/: spec.md
openspec/changes/establish-suunta-shape/specs/quality-governance/: spec.md
openspec/changes/sync-shipped-truth/: design.md  proposal.md  tasks.md
openspec/changes/sync-shipped-truth/specs/convergence-contract/: spec.md
openspec/specs/convergence-contract/: spec.md
openspec/specs/public-facade/: spec.md
openspec/specs/quality-governance/: spec.md
