[workspace]
resolver = "2"
members = [
    "crates/suunta",
    "crates/suunta-contract",
    "crates/suunta-governance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tacticaldoll/suunta"
publish = true

[workspace.dependencies]
suunta-contract = { path = "crates/suunta-contract", version = "0.1.0" }
tianheng = "0.1.9"
guibiao = "0.1.9"
