[package]
name = "suunta-governance"
description = "Executable architectural governance for the Suunta workspace (tianheng constitution)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[dependencies]
tianheng.workspace = true
guibiao.workspace = true
